# ai-music-playlist-generator

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py
app/models/: __init__.py  approval.py  enums.py  job.py  playlist.py  slack_installation.py  track.py
app/routes/: playlists.py  slack.py  suno.py  tracks.py  ui.py  youtube.py
app/schemas/: __init__.py  playlist.py  suno.py  track.py
app/scripts/: suno_login_window.py
app/services/: __init__.py  background_worker.py  codex_metadata_service.py  cover_art_service.py  dreamina_service.py  mcp_orchestrator.py  playlist_builder.py  registry.py  release_metadata_service.py  slack_installation_store.py  slack_service.py  suno_service.py  suno_session_service.py  youtube_service.py
app/static/: app.js  index.html  styles.css
app/utils/: openclaw_slack_loop.py  timeline.py  track_titles.py  youtube_localizations.py
app/workflows/: __init__.py  approvals.py  slack_sync.py  (+2 more)
docs/: deploy-oracle-always-free.md  google-login-protection.md  openclaw-next-release-planner.md  openclaw-skills.md  openclaw-upload.md  openclaw-visual-assets.md  openclaw-youtube-metadata.md  oracle-vm-status.md  project-status.md  suno-v55-instrumental-format.md
scripts/: backfill_youtube_localizations.py  openclaw-release  openclaw_release.py
tests/: conftest.py  test_health.py  test_openclaw_release.py  test_playlist_automation.py  test_playlist_builder.py  test_release_metadata_service.py  test_slack_service.py  test_suno_flow.py  test_suno_session.py  test_track_flow.py  test_ui.py
(+16 files in other folders)
